vendor/mico-2.3.2/test/idl/error/expected-stderr-case9.idl
case9.idl:9: type 'S' has identical members
